--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -47,7 +47,7 @@ jobs:
         id: metadebian
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.DEBIAN_IMAGE_NAME }}:debian9.13
+          images: ${{ env.REGISTRY }}/${{ env.DEBIAN_IMAGE_NAME }}
           
       - name: Build and push Docker Debian image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
