--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -11,6 +11,20 @@ env:
 
 
 jobs:
+  test-and-code-coverage:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: test
+        run: make test
+      - name: code coverage
+        run: make coverage     
+
   build-and-push-image:
     runs-on: ubuntu-latest
     permissions:
