--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -8,8 +8,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  ALPINE_IMAGE_NAME:  ${{ github.repository }}-alpine
-  DEBIAN_IMAGE_NAME:  ${{ github.repository }}-debian
   IMAGE_NAME:  ${{ github.repository }}-recommender
 
 
@@ -24,10 +22,20 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      
+      - name: cleanup
+        run: make purge
+      
       - name: test
         run: make test
+      
       - name: code coverage
-        run: make coverage     
+        run: make coverage    
+      
+      - name: display code coverage
+        uses: romeovs/lcov-reporter-action@v0.2.16
+        with:
+          lcov-file: ./coverage/coverage.info 
 
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -38,7 +46,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      
+
+      - name: cleanup
+        run: make purge
+        
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -57,7 +68,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.metaalpine.outputs.tags }}-alpine
+          tags: ${{ steps.metaalpine.outputs.tags }}-alpine, ${{ steps.metaalpine.outputs.tags }}-alpine3.14.6
           labels: ${{ steps.metaalpine.outputs.labels }}
           file: alpine.Dockerfile
           
@@ -72,6 +83,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.metadebian.outputs.tags }}-debian
+          tags: ${{ steps.metadebian.outputs.tags }}-debian, ${{ steps.metadebian.outputs.tags }}-debian9.13
           labels: ${{ steps.metadebian.outputs.labels }}
           file: debian.Dockerfile
