--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -22,7 +22,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      
+
+      - name: Install lcov
+        run: sudo apt-get install -y lcov
+
       - name: cleanup
         run: make purge
 
