--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -42,6 +42,7 @@ jobs:
         uses: romeovs/lcov-reporter-action@v0.2.19
         with:
           lcov-file: ./coverage.info 
+          github-token: ${{ secrets.TOKEN }}
 
   build-and-push-image:
     runs-on: ubuntu-latest
