--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -38,11 +38,11 @@ jobs:
       - name: code coverage
         run: make coverage    
       
-      - name: display code coverage
-        uses: romeovs/lcov-reporter-action@v0.2.19
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
         with:
-          lcov-file: ./coverage.info 
           github-token: ${{ secrets.TOKEN }}
+          path-to-lcov: "./coverage.info"
 
   build-and-push-image:
     runs-on: ubuntu-latest
