--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -38,11 +38,14 @@ jobs:
       - name: code coverage
         run: make coverage    
       
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.TOKEN }}
-          path-to-lcov: "./coverage.info"
+   - name: Report code coverage
+      uses: zgosalvez/github-actions-report-lcov@v1
+      with:
+        coverage-files: coverage.info
+        minimum-coverage: 60
+        artifact-name: code-coverage-report
+        github-token: ${{ secrets.TOKEN }}
+        working-directory: .
 
   build-and-push-image:
     runs-on: ubuntu-latest
