--- a/.github/workflows/docker_github_packages.yml
+++ b/.github/workflows/docker_github_packages.yml
@@ -44,7 +44,7 @@ jobs:
           coverage-files: coverage.info
           minimum-coverage: 60
           artifact-name: code-coverage-report
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOKEN_SAMER }}
           working-directory: .
 
   build-and-push-image:
@@ -65,7 +65,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TOKEN_SAMER }}
 
       - name: Extract metadata (tags, labels) for Docker Alpine
         id: metaalpine
